# llama.cpp

./: .gitignore  1push.sh  CMakeLists.txt  MIGRATION_CHANGES_FROM_LLAMA_CPP.md  readmd-ppl.md  run.sh  summary.sh
.devops/: zlpu.Dockerfile
aex/: CMakeLists.txt
aex/zt4.fangzhen/: CMakeLists.txt  README.md  simple-sgemm.cpp
aex/zt5.simple/: CMakeLists.txt
common/: arg.cpp  common.h
ggml/: CMakeLists.txt
ggml/include/: ggml-zlpu.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cpu/: ggml-cpu-impl.h  ggml-cpu.c  repack.cpp  vec.cpp  vec.h
ggml/src/ggml-cpu/kleidiai/: kleidiai.cpp
ggml/src/ggml-zlpu/: CMakeLists.txt  common.h  ggml-zlpu.cpp  zlpu-dev.cpp  zlpu-dev.h  zlpu-ops.cpp  zlpu-ops.h
kv_dump_logs/: kv_seq_0.txt  reduction_block_drop_compare.csv  reduction_block_drop_compare.md
scripts/: analyze_block_psum_relation.py  kv_cache_dump.py  make_reduction_drop_compare_table.py  plot_block_psum_relation.py  plot_fp8_interval_hist.py  plot_reduction_prod_profile.py
src/: llama-context.cpp
tools/main/: main.cpp
tools/perplexity/: perplexity.cpp
